// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher-operator": {
      "model": "opencode/glm-4.7-free",
    },
    "glitch-auditor": {
      "model": "opencode/glm-4.7-free",
    },
    "nexus-orchestrator": {
      "model": "opencode/glm-4.7-free",
    },
    "optic-analyst": {
      "model": "opencode/glm-4.7-free",
    },
    "scout-recon": {
      "model": "opencode/glm-4.7-free",
    },
    "seer-advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "tactician-strategist": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "glitch-auditor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "cipher-operator": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "openai/gpt-5.2",
    },
    "optic-analyst": {
      "model": "openai/gpt-5.2",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "cipher-operator": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "openai/gpt-5.2",
    },
    "optic-analyst": {
      "model": "openai/gpt-5.2",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "google/gemini-3-pro",
    },
    "cipher-operator": {
      "model": "google/gemini-3-pro",
    },
    "glitch-auditor": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "google/gemini-3-pro",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "google/gemini-3-pro",
    },
    "cipher-operator": {
      "model": "google/gemini-3-pro",
    },
    "glitch-auditor": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "google/gemini-3-pro",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "opencode/gemini-3-flash",
    },
    "scout-recon": {
      "model": "opencode/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "glitch-auditor": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "opencode/gemini-3-flash",
    },
    "scout-recon": {
      "model": "opencode/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "augur-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "glitch-auditor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "optic-analyst": {
      "model": "github-copilot/gemini-3-flash",
    },
    "scout-recon": {
      "model": "github-copilot/gpt-5-mini",
    },
    "seer-advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "augur-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "glitch-auditor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "optic-analyst": {
      "model": "github-copilot/gemini-3-flash",
    },
    "scout-recon": {
      "model": "github-copilot/gpt-5-mini",
    },
    "seer-advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for archiveResearcher when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher-operator": {
      "model": "opencode/glm-4.7-free",
    },
    "glitch-auditor": {
      "model": "opencode/glm-4.7-free",
    },
    "nexus-orchestrator": {
      "model": "opencode/glm-4.7-free",
    },
    "optic-analyst": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "tactician-strategist": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for archiveResearcher with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher-operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "glitch-auditor": {
      "model": "opencode/glm-4.7-free",
    },
    "nexus-orchestrator": {
      "model": "opencode/glm-4.7-free",
    },
    "optic-analyst": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "scout-recon": {
      "model": "opencode/gpt-5-nano",
    },
    "seer-advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "tactician-strategist": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "opencode/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "augur-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "optic-analyst": {
      "model": "github-copilot/gemini-3-flash",
    },
    "scout-recon": {
      "model": "github-copilot/gpt-5-mini",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (archiveResearcher uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (scoutRecon uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "nexus-orchestrator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "glitch-auditor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "github-copilot/gemini-3-flash",
    },
    "scout-recon": {
      "model": "opencode/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "archive-researcher": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "augur-planner": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "cipher-operator": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "glitch-auditor": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "nexus-orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "optic-analyst": {
      "model": "google/gemini-3-flash",
    },
    "scout-recon": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "seer-advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tactician-strategist": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
